# dissertator

./: .gitignore  AGENTS.md  DESIGN.md  README.md  TODO.md  appveyor.yml  index.html  package.json  tasks.md  tech.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: citekey.md  managed-proxy-spec.md  multi-provider-plan.md  tools.md
sidecar/: package.json  tsconfig.json
sidecar/scripts/: fetch-granite-model.ts  smoke-granite.ts  stage-resources.ts
sidecar/src/: agent-files.ts  chats.test.ts  db.test.ts  db.ts  documents.test.ts  index.ts  pref-consolidate.ts  prompts.test.ts  prompts.ts  schema.sql  search.test.ts  search.ts
sidecar/src/agent/: agent.test.ts  loop.ts  tools.ts
src/: App.tsx  ipc.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/App/: index.tsx  useApp.ts
src/components/: AttentionPanel.tsx  CenterPane.tsx  ChatPanel.tsx  CitationPopup.tsx  LibraryPanel.tsx  ManuscriptEditor.tsx  NotePopup.tsx  OnboardingDialog.tsx  PanelDivider.tsx  PdfViewer.tsx  ReferenceEditDialog.tsx  ReferenceFields.tsx  ReferencesView.tsx  ResizeHandle.tsx  SettingsDialog.tsx  SourceCombobox.tsx  StatusBadge.tsx  SystemDialog.tsx  TextViewer.tsx  WindowControls.tsx
src/lib/: api.ts  assetImport.ts  citationPlugin.ts  milkdown-theme.css  tabs.ts  themes.ts  useExternalLinks.ts
src/styles/: agent.css  base.css  center.css  chat.css  editor.css  fonts.css  index.css  library.css  overlays.css  settings.css  viewers.css
(+131 files in other folders)
