[package]
name = "dissertator"
version = "0.6.0"
description = "A cross-platform writing + research tool"
edition = "2021"
rust-version = "1.77"

[lib]
name = "dissertator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
# Real OS keychain backends. WITHOUT one of these, keyring 3.x silently uses
# an in-process mock store: keys round-trip while the app runs but are never
# persisted and never touch the OS keychain (no prompt, gone on restart).
# - sync-secret-service: gnome-keyring/KWallet via DBus (Linux)
# - apple-native:        macOS Keychain
# - windows-native:      Windows Credential Manager
# - crypto-rust:         pure-Rust DH for the secret-service (avoids libssl)
keyring = { version = "3", features = [
    "sync-secret-service",
    "apple-native",
    "windows-native",
    "crypto-rust",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
